@@ -24,6 +24,11 @@
 	(backward_visible_word_start) (forward_visible_word_ends)
 	(backward_visible_word_starts) Add descriptions for PyGTK 2.4
 
+	* pygtk-gtktexttag.xml Reorder property descriptions.
+	("event") Add return value description.
+
+	* pygtk-gtktexttagtable.xml (foreach) Add description for PyGTK 2.4
+
 2004-04-15  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkmessagedialog.xml (set_markup) Add description of this
